# Simplex_Cpp

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
include/: config.h  graph.h  simplex.h  variable.h
problems/: bug.problem  test.problem  test_1.problem  test_2.problem  test_3.problem  test_4.problem  test_5.problem  test_6.problem  test_asignacion.problem  test_dijkstra.problem  test_entera.problem  test_examen.problem  test_floyd.problem  test_max_flow.problem  test_new.problem  test_simplex.problem  test_transbordo.problem  test_transporte.problem  test_tree.problem
src/: columnset.cpp  constraint.cpp  graph.cpp  main.cpp  objectivefunction.cpp  simplex.cpp  variable.cpp
